--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "next": "13.4.0",
     "react": "18",
     "react-dom": "18",
-    "react-typed": "^2.0.12"
+    "react-typed": "^2.0.12",
+
+    "tailwindcss": "3",
+    "postcss": "8",
+    "autoprefixer": "10",
+    "typescript": "5"
   },
   "devDependencies": {
     "@types/node": "20",
@@ -28,9 +33,6 @@
     "autoprefixer": "10",
     "eslint": "8",
     "eslint-config-next": "13.5.4",
-    "gh-pages": "^6.3.0",
-    "postcss": "8",
-    "tailwindcss": "3",
-    "typescript": "5"
+    "gh-pages": "^6.3.0"
   }
 }
