--- a/package.json
+++ b/package.json
@@ -20,19 +20,17 @@
     "react": "18",
     "react-dom": "18",
     "react-typed": "^2.0.12",
-
-    "tailwindcss": "3",
-    "postcss": "8",
-    "autoprefixer": "10",
     "typescript": "5"
   },
   "devDependencies": {
     "@types/node": "20",
     "@types/react": "18.2.19",
     "@types/react-dom": "18",
-    "autoprefixer": "10",
+    "autoprefixer": "^10.4.21",
     "eslint": "8",
     "eslint-config-next": "13.5.4",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.3.4"
   }
 }
